# gd32l23x-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32L233C_START/: gd32l233c_start.c  gd32l233c_start.h
Drivers/BSP/GD32L233K_START/: gd32l233k_start.c  gd32l233k_start.h
Drivers/BSP/GD32L233R_EVAL/: gd32l233r_eval.c  gd32l233r_eval.h
Drivers/BSP/GD32L235E_START/: gd32l235e_start.c  gd32l235e_start.h
Drivers/BSP/GD32L235O_START/: gd32l235o_start.c  gd32l235o_start.h
Drivers/BSP/GD32L235Q_START/: gd32l235q_start.c  gd32l235q_start.h
Drivers/BSP/GD32L235R_EVAL/: gd32l235r_eval.c  gd32l235r_eval.h
Projects/GD32L233C_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L233C_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32L233C_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32L233C_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L233C_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32L233C_START/: CMakeLists.txt
Projects/GD32L233C_START/04_USART_HyperTerminal_Interrupt/: gd32l23x_flash.ld
Projects/GD32L233C_START/04_USART_HyperTerminal_Interrupt/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233C_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32L233C_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L233C_START/06_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233K_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L233K_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt  gd32l23x_flash.ld
Projects/GD32L233K_START/02_GPIO_Key_Polling_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233K_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L233K_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32L233K_START/: CMakeLists.txt
Projects/GD32L233K_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L233K_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32L233K_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L233K_START/06_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233K_START/06_USBD_CDC_ACM/Drivers/GD32L23x_usbd_library/: CMakeLists.txt
Projects/GD32L233R_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L233R_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32L233R_EVAL/03_EXTI_Key_Interrupt_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32L233R_EVAL/05_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L233R_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32L233R_EVAL/07_LPUART_Deepsleep_Wakeup/Application/: readme.txt
Projects/GD32L233R_EVAL/08_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32L233R_EVAL/09_DAC_Output_Voltage_Value/Application/: readme.txt
Projects/GD32L233R_EVAL/10_Comparator_Obtain_Brightness/: CMakeLists.txt
Projects/GD32L233R_EVAL/10_Comparator_Obtain_Brightness/Application/: readme.txt
Projects/GD32L233R_EVAL/11_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/12_SPI_QUAD_FLASH/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/13_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/14_TRNG_Get_Random/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/15_CAU/Application/: readme.txt
Projects/GD32L233R_EVAL/16_RCU_Clock_Out/Application/: readme.txt
Projects/GD32L233R_EVAL/17_CTC_Calibration/Application/: readme.txt
Projects/GD32L233R_EVAL/18_PMU_Sleep_Wakeup/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/19_RTC_Calendar/Application/: readme.txt
Projects/GD32L233R_EVAL/19_RTC_Calendar/cmake/: project.cmake
Projects/GD32L233R_EVAL/20_TIMER_Breath_LED/Application/: readme.txt
Projects/GD32L233R_EVAL/21_LPTIMER_Deepsleep_Pwmout/Application/: readme.txt
Projects/GD32L233R_EVAL/22_SLCD_Glass/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/23_USBD_Keyboard/: CMakeLists.txt
Projects/GD32L233R_EVAL/23_USBD_Keyboard/Application/: CMakeLists.txt  readme.txt
Projects/GD32L233R_EVAL/23_USBD_Keyboard/Drivers/BSP/GD32L233R_EVAL/: CMakeLists.txt
Projects/GD32L233R_EVAL/24_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32L235E_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L235E_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32L235E_START/02_GPIO_Key_Polling_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32L235E_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32L235E_START/: CMakeLists.txt
Projects/GD32L235E_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L235E_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L235E_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32L235O_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32L235O_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32L235O_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32L235O_START/: CMakeLists.txt
Projects/GD32L235O_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32L235O_START/04_USART_HyperTerminal_Interrupt/: CMakeLists.txt
Projects/GD32L235O_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32L235O_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L235Q_START/03_EXTI_Key_Interrupt_mode/Drivers/GD32L23x_standard_peripheral/: CMakeLists.txt
Projects/GD32L235Q_START/04_USART_HyperTerminal_Interrupt/: CMakeLists.txt
Projects/GD32L235Q_START/05_TIMER_Key_EXTI/Drivers/BSP/GD32L235Q_START/: CMakeLists.txt
Projects/GD32L235Q_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32L235R_EVAL/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32L235R_EVAL/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32L235R_EVAL/: CMakeLists.txt
Projects/GD32L235R_EVAL/24_USBD_Keyboard/: CMakeLists.txt
Projects/GD32L235R_EVAL/25_USBD_CDC_ACM/: GD32L235.svd
(+245 files in other folders)
